fix auth bearer token in header api
