# app/controller/auth.go
@@ -16,17 +16,18 @@ type User struct {
 }
 
 // LoginController handles user login requests.
-// @Summary      User login
-// @Description  Authenticates a user and returns a JWT token if credentials are valid.
-// @Tags         auth
-// @Accept       json
-// @Produce      json
-// @Param        user  body      User  true  "User credentials"
-// @Success      200   {object}  map[string]string  "JWT token"
-// @Failure      400   {string}  string  "Invalid request body"
-// @Failure      401   {string}  string  "Invalid credentials"
-// @Failure      500   {string}  string  "No username found"
-// @Router       /api/v1/login [post]
+//
+//	@Summary		User login
+//	@Description	Authenticates a user and returns a JWT token if credentials are valid.
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		User				true	"User credentials"
+//	@Success		200		{object}	map[string]string	"JWT token"
+//	@Failure		400		{string}	string				"Invalid request body"
+//	@Failure		401		{string}	string				"Invalid credentials"
+//	@Failure		500		{string}	string				"No username found"
+//	@Router			/api/v1/login [post]
 func LoginController(c *fiber.Ctx) error {
 	c.Set("Content-Type", "application/json")
 	fmt.Printf("The request body is %v\n", c.Body())
@@ -50,15 +51,16 @@ func LoginController(c *fiber.Ctx) error {
 
 // ProtectedHandler is a handler for protected routes.
 // It checks for a valid JWT token in the Authorization header.
-// @Summary      Protected route
-// @Description  This route is protected and requires a valid JWT token.
-// @Tags         Protected
-// @Accept       json
-// @Produce      plain
-// @Success      200  {string}  string  "Welcome to the protected area
-// @Failure      401  {string}  string  "Unauthorized"
-// @Security     ApiKeyAuth
-// @Router       /api/v1/protected [get]
+//
+//	@Summary		Protected route
+//	@Description	This route is protected and requires a valid JWT token.
+//	@Tags			Protected
+//	@Accept			json
+//	@Produce		plain
+//	@Success		200	{string}	string	"Welcome to the protected area
+//	@Failure		401	{string}	string	"Unauthorized"
+//	@Security		ApiKeyAuth
+//	@Router			/api/v1/protected [get]
 func ProtectedHandler(c *fiber.Ctx) error {
 	c.Set("Content-Type", "application/json")
 	authHeader := c.Get("Authorization")
